--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ django-cors-middleware==1.5.0
 django-extensions==2.2.9
 djangorestframework==3.11.0
 mysqlclient==1.4.6
+PyJWT==1.7.1
 pytz==2019.3
 six==1.14.0
 sqlparse==0.3.1
